# SecondReader

./: README.md
LongitudinalReader/: .env.example  .gitignore  README.md  pyproject.toml
LongitudinalReader/data/cohort/: benign_01.json  benign_02.json  benign_03.json  benign_04.json  benign_05.json  benign_06.json  benign_07.json  benign_08.json
LongitudinalReader/data/heroes/: hero1_drifting_creatinine.json  hero2_reattributed_fatigue.json  hero3_assembling_constellation.json
LongitudinalReader/longitudinal_reader/: __init__.py  cli.py  events.py  llm.py  load.py  prompts.py  render.py  schemas.py
LongitudinalReader/longitudinal_reader/agent/: __init__.py  decompose.py  evidence.py  reconcile.py  run.py
LongitudinalReader/longitudinal_reader/primitives/: __init__.py  constellation.py  recurrence.py  slope.py
LongitudinalReader/scripts/: gen_synthea.sh
LongitudinalReader/tools/: gen_cohort.py
poc/: .env.example  .gitignore  DEMO.md  build_cohort.py  demo.py  generate_prose.py  llm_client.py  patient_loader.py  requirements.txt  run_poc.py  trial_client.py  walkthrough.py
poc/agents/: chart_reconciler.py  confidence_engine.py  criteria_parser.py
poc/data/: trial_cohort.jsonl
poc/trials/: trial_aom_v1.json  trial_aom_v2.json  trial_v1.json
second_voice/: .env.example  .gitignore  README.md
second_voice/data/: enc01_migraine_amitriptyline.json  enc02_diabetes_followup.json  enc03_hypertension_lisinopril.json
second_voice/second_voice/: __init__.py  audit.py  cli.py  llm.py  loaders.py  pipeline.py  prompts.py  schemas.py  validate.py
